--- a/NumerosDaMega/nbproject/project.properties
+++ b/NumerosDaMega/nbproject/project.properties
@@ -37,7 +37,8 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.Faces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
